--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,15 @@
-# Dependencies are installed separately; list project requirements here as needed.
+# Core numerical and scientific computing packages
+numpy
+scipy
+
+# Imaging and visualization libraries
+matplotlib
+opencv-python
+scikit-image
+
+# Data handling utilities
+pandas
+openpyxl
+
+# TOML parsing compatibility for Python < 3.11
+tomli
